--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "vue-at",
-  "description": "At.js for Vue",
+  "name": "romvo-vue-at",
+  "description": "Romvo At.js for Vue",
   "version": "2.5.0-beta.1",
   "author": "Fritz Lin <uxfritz@163.com>",
+  "contributors": ["Romvo Team <developers@romvo.io>"],
   "repository": "https://github.com/fritx/vue-at",
   "scripts": {
     "dev": "webpack-dev-server --config webpack/demo --open --inline --hot",
